[gd_scene load_steps=13 format=3 uid="uid://cmys3h2m51j1b"]

[ext_resource type="Script" uid="uid://qhn36ab35e1h" path="res://character/player/player.gd" id="1_y0s34"]
[ext_resource type="PackedScene" uid="uid://2l8rxidok4e1" path="res://character/sprite_body/sprite_body.tscn" id="2_8eijk"]
[ext_resource type="Script" uid="uid://btmjtxoxxqx28" path="res://character/states/idle.gd" id="3_eu8pa"]
[ext_resource type="PackedScene" uid="uid://dice1e7tigbs" path="res://weapons/pistol.tscn" id="3_noxpy"]
[ext_resource type="Script" uid="uid://bqdjespu4h6wc" path="res://character/states/dead.gd" id="4_noxpy"]
[ext_resource type="Script" uid="uid://fonbseyemth4" path="res://character/states/disabled.gd" id="5_0cf6c"]
[ext_resource type="Script" uid="uid://b6770krcxnow0" path="res://character/states/walk.gd" id="6_v2h1c"]
[ext_resource type="AudioStream" uid="uid://nim83ibntaux" path="res://assets/sfx/hits/hurt_blood.ogg" id="8_0cf6c"]
[ext_resource type="PackedScene" uid="uid://bnk5012wxbkep" path="res://effects/blood.tscn" id="9_v2h1c"]
[ext_resource type="PackedScene" uid="uid://6l1gwpv3latl" path="res://interface/health_bar/health_bar.tscn" id="10_qh58e"]
[ext_resource type="AudioStream" uid="uid://x81f0bqw7usy" path="res://assets/sfx/death/death_big_man_01.ogg" id="11_hr31g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hmqog"]
radius = 5.4
height = 22.5

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 15
script = ExtResource("1_y0s34")

[node name="cls_player" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("CapsuleShape2D_hmqog")

[node name="sb_container" type="Node2D" parent="."]
position = Vector2(0, -13)

[node name="sprite_body" parent="sb_container" instance=ExtResource("2_8eijk")]

[node name="Pistol" parent="sb_container" instance=ExtResource("3_noxpy")]

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("3_eu8pa")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("4_noxpy")

[node name="Disabled" type="Node" parent="States"]
script = ExtResource("5_0cf6c")

[node name="Walk" type="Node" parent="States"]
script = ExtResource("6_v2h1c")

[node name="lbl_previous_state" type="Label" parent="."]
offset_left = -19.0
offset_right = 21.0
offset_bottom = 23.0
text = "prev"

[node name="lbl_state" type="Label" parent="."]
offset_left = -18.0
offset_top = 17.0
offset_right = 22.0
offset_bottom = 40.0
text = "state"

[node name="lbl_state2" type="Label" parent="."]
offset_left = 30.0
offset_top = -46.0
offset_right = 70.0
offset_bottom = -23.0
text = "X"

[node name="lbl_state_y" type="Label" parent="."]
offset_left = 31.0
offset_top = -24.0
offset_right = 71.0
offset_bottom = -1.0
text = "y"

[node name="asp_damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0cf6c")

[node name="blood" parent="." instance=ExtResource("9_v2h1c")]
position = Vector2(0, -12)
emitting = false
one_shot = true

[node name="health_bar" parent="." instance=ExtResource("10_qh58e")]

[node name="asp_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_hr31g")

[node name="tmr_respawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="tmr_respawn" to="." method="_on_tmr_respawn_timeout"]
